[gd_scene load_steps=2 format=2]

[ext_resource path="res://accesorios/scripts/menu/selection.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="left" type="Button" parent="."]
margin_left = 29.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 21.0
text = "<"

[node name="right" type="Button" parent="."]
margin_left = 95.0
margin_top = 1.0
margin_right = 107.0
margin_bottom = 21.0
text = ">"

[node name="selected_scene" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 1.0
margin_right = 90.0
margin_bottom = 41.0

[node name="start" type="Button" parent="."]
margin_left = 50.0
margin_top = 43.0
margin_right = 91.0
margin_bottom = 63.0
text = "start"

[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="start" to="." method="_on_Button_pressed"]
